tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/double-comma-2.stderr
TOML parse error at line 1, column 23
  |
1 | double-comma-2 = [1,2,,]
  |                       ^
invalid array
expected `]`
